[package]
name = "heatpump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
bit_reverse = "0.1.8"
bitfield = "0.14.0"
bytes = "1.3.0"
hex = "0.4.3"
hex-literal = "0.3.4"
hexplay = "0.2.1"
rbroadlink = "0.2.1"
thiserror = "1.0.37"
