[package]
name = "heatpump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
base64 = "0.20.0"
bit_reverse = "0.1.8"
bitfield = "0.14.0"
bytes = "1.3.0"
clap = { version = "4.0.29", features = ["derive"] }
hex = "0.4.3"
hex-literal = "0.3.4"
hexplay = "0.2.1"
irp = "0.3.1"
rbroadlink = { path = "vendor/rbroadlink" }
serde = "1.0.151"
serde_json = { version = "1.0.90", features = ["preserve_order"] }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.37"
